Trying to fix slider visibility issue

--- a/frontend/src/app/components/add-board-modal/add-board-modal.component.scss
+++ b/frontend/src/app/components/add-board-modal/add-board-modal.component.scss
@@ -12,4 +12,5 @@
 
 .slider {
   width: 100%;
+  margin: 10px 0;
 }
